# dev_guard

./: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/windows/flutter/: generated_plugins.cmake
ios/: dev_guard.podspec
ios/Classes/: DevGuardHardwarePlugin.swift  DevGuardPlugin.swift  devguard_core_forwarder.c
ios/Frameworks/devguard_core.xcframework/: Info.plist
lib/: dev_guard.dart
lib/src/: dev_guard_instance.dart
lib/src/constants/: sdk_identity.dart
lib/src/ffi/: devguard_ffi.dart
lib/src/internal/: _obf.dart
lib/src/models/: device_metadata.dart  guard_response.dart  license_status.dart  lock_screen_branding.dart  status_fetch_result.dart
lib/src/platform/: hardware_channel.dart
lib/src/services/: cache_service.dart  dev_guard_logger.dart  device_token_service.dart  guard_enforcement.dart  hardware_service.dart  license_key_service.dart  plugin_crash_reporter.dart  remote_wipe_service.dart  rest_checker.dart  secure_storage_service.dart  status_checker.dart  status_url_resolver.dart  sync_policy_service.dart  usage_logger.dart
lib/src/widgets/: contact_button.dart  (+6 more)
src/: CMakeLists.txt  devguard_core.c
src/headers/: devguard_core.h
tool/: gen_obf.dart
(+5 files in other folders)
